RESOLVED FIXED 48315
Advances are wrong and glyphs are rotated improperly in vertical writing
https://bugs.webkit.org/show_bug.cgi?id=48315
Summary Advances are wrong and glyphs are rotated improperly in vertical writing
Takumi Takano
Reported 2010-10-26 02:25:11 PDT
We shouldn't use vertical metrics for Roman fonts. Also, we should rotate vertical variant glyphs back on drawing as the whole run has already been rotated beforehand.
Attachments
Proposed patch (49.50 KB, patch)
2010-10-26 04:07 PDT, Takumi Takano
hyatt: review+
Takumi Takano
Comment 1 2010-10-26 04:07:35 PDT
Created attachment 71862 [details] Proposed patch
Dave Hyatt
Comment 2 2010-10-26 11:03:21 PDT
Comment on attachment 71862 [details] Proposed patch This looks good. The tests in fast/blockflow presumably need to be regenerated also, but I can handle that when landing it.
Dave Hyatt
Comment 3 2010-10-26 13:47:28 PDT
Fixed in r70569.
Adam Roben (:aroben)
Comment 4 2010-10-27 05:35:39 PDT
This patch didn't update the Leopard-specific results, so now these tests are failing on Leopard. See http://build.webkit.org/results/Leopard%20Intel%20Release%20(Tests)/r70636%20(23255)/results.html
Note You need to log in before you can comment on or make changes to this bug.