Advances are wrong and glyphs are rotated improperly in vertical writing https://bugs.webkit.org/show_bug.cgi?id=48315

Patch by takano takumi <takano1@asia.apple.com> on 2010-10-26
Reviewed by Dave Hyatt.

WebCore:

We shouldn't use vertical metrics for Roman fonts. Also, we should rotate vertical variant
glyphs back on drawing as the whole run has already been rotated beforehand.

* platform/graphics/cocoa/FontPlatformDataCocoa.mm:
(WebCore::FontPlatformData::FontPlatformData): Changed to ignore vertical orientation when the font doesn't support vertical metrics.
* platform/graphics/mac/FontMac.mm:
(WebCore::showGlyphsWithAdvances): Changed to rotate glyphs -90 degree for vertical variants.
(WebCore::Font::drawGlyphs):

LayoutTests:

Changed tests to check more glyphs and updated results.

* fast/text/international/vertical-text-glyph-test.html:
* fast/text/international/vertical-text-metrics-test.html:
* platform/mac/fast/text/international/vertical-text-glyph-test-expected.checksum:
* platform/mac/fast/text/international/vertical-text-glyph-test-expected.png:
* platform/mac/fast/text/international/vertical-text-glyph-test-expected.txt:
* platform/mac/fast/text/international/vertical-text-metrics-test-expected.txt:



Canonical link: https://commits.webkit.org/61101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70569 268f45cc-cd09-0410-ab3c-d52691b4dbfc